Bug #42099 Falcon: Online ALTER add/drop primary key

- Implemented online alter add/drop primary key
- Improved index mapping between server and Falon in StorageInterface.