storage/falcon/ha_falcon.cpp
@@ -553,15 +553,15 @@ int StorageInterface::open(const char *name, int mode, uint test_if_locked)
 
 	thr_lock_data_init((THR_LOCK *)storageShare->impure, &lockData, NULL);
 
-	if (table)
-		mapFields(table);
+	// Map fields for Falcon record encoding
+	
+	mapFields(table);
+	
+	// Map server indexes to Falcon internal indexes
 	
 	setIndexes(table);
 	
-	if (ret)
-		DBUG_RETURN(error(ret));
-
-	DBUG_RETURN(0);
+	DBUG_RETURN(error(ret));
 }
 
 
@@ -893,7 +893,11 @@ int StorageInterface::create(const char *mySqlName, TABLE *form, HA_CREATE_INFO 
 				DBUG_RETURN(error(ret));
 				}
 
+	// Map fields for Falcon record encoding
+	
 	mapFields(form);
+	
+	// Map server indexes to Falcon indexes
 	
 	setIndexes(table);
 
@@ -908,25 +912,39 @@ int StorageInterface::add_index(TABLE* table_arg, KEY* key_info, uint num_of_key
 	DBUG_RETURN(ret);
 }
 
-int StorageInterface::createIndex(const char *schemaName, const char *tableName, TABLE *table, int indexId)
+int StorageInterface::createIndex(const char *schemaName, const char *tableName, TABLE *srvTable, int indexId)
 {
-	KEY *key = table->key_info + indexId;
-	StorageIndexDesc indexDesc;
-	getKeyDesc(table, indexId, &indexDesc);
-	
+	int ret = 0;
 	CmdGen gen;
-	const char *unique = (key->flags & HA_NOSAME) ? "unique " : "";
-	gen.gen("create %sindex \"%s\" on %s.\"%s\" ", unique, indexDesc.name, schemaName, tableName);
-	genKeyFields(key, &gen);
-	const char *sql = gen.getString();
+	StorageIndexDesc indexDesc;
+	getKeyDesc(srvTable, indexId, &indexDesc);
+	
+	if (indexDesc.primaryKey)
+		{
+		int64 incrementValue = 0;
+		genTable(srvTable, &gen);
+		
+		// Primary keys are a special case, so use upgrade()
+	
+		ret = storageTable->upgrade(gen.getString(), incrementValue);
+		}
+	else
+		{
+		KEY *key = srvTable->key_info + indexId;
+		const char *unique = (key->flags & HA_NOSAME) ? "unique " : "";
+		gen.gen("create %sindex \"%s\" on %s.\"%s\" ", unique, indexDesc.name, schemaName, tableName);
+		genKeyFields(key, &gen);
+		
+		ret = storageTable->createIndex(&indexDesc, gen.getString());
+		}
 
-	return storageTable->createIndex(&indexDesc, sql);
+	return ret;
 }
 
-int StorageInterface::dropIndex(const char *schemaName, const char *tableName, TABLE *table, int indexId, bool online)
+int StorageInterface::dropIndex(const char *schemaName, const char *tableName, TABLE *srvTable, int indexId, bool online)
 {
 	StorageIndexDesc indexDesc;
-	getKeyDesc(table, indexId, &indexDesc);
+	getKeyDesc(srvTable, indexId, &indexDesc);
 	
 	CmdGen gen;
 	gen.gen("drop index %s.\"%s\"", schemaName, indexDesc.name);
@@ -1388,9 +1406,14 @@ int StorageInterface::index_read(uchar *buf, const uchar *keyBytes, uint key_len
                                 enum ha_rkey_function find_flag)
 {
 	DBUG_ENTER("StorageInterface::index_read");
-	int ret, which = 0;
+	int which = 0;
 	ha_statistic_increment(&SSV::ha_read_key_count);
 
+	int ret = storageTable->checkCurrentIndex();
+
+	if (ret)
+		DBUG_RETURN(error(ret));
+	
 	// XXX This needs to be revisited
 	switch(find_flag)
 		{
@@ -1456,22 +1479,34 @@ int StorageInterface::index_init(uint idx, bool sorted)
 	nextRecord = 0;
 	haveStartKey = false;
 	haveEndKey = false;
-	int ret = 0;
 
-	ret = storageTable->setCurrentIndex(idx);
+	// Get and hold a shared lock on StorageTableShare::indexes, then set
+	// the corresponding Falcon index for use on the current thread
+	
+	int ret = storageTable->setCurrentIndex(idx);
 
+	// If the index is not found, remap the index and try again
+		
 	if (ret)
 		{
-		setIndex(table, idx);
+		storageShare->lockIndexes(true);
+		remapIndexes(table);
+		storageShare->unlockIndexes();
+		
 		ret = storageTable->setCurrentIndex(idx);
+		
+		// Online ALTER allows access to partially deleted indexes, so
+		// fail silently for now to avoid fatal assert in server.
+		// 
+		// TODO: Restore error when server imposes DDL lock across the
+		//       three phases of online ALTER.
+		
+		if (ret)
+			//DBUG_RETURN(error(ret));
+			DBUG_RETURN(error(0));
 		}
 		
-	// validateIndexes(table);
-		
-	if (ret)
-		DBUG_RETURN(error(ret));
-
-	DBUG_RETURN(ret);
+	DBUG_RETURN(error(ret));
 }
 
 int StorageInterface::index_end(void)
@@ -1526,15 +1561,15 @@ ha_rows StorageInterface::records_in_range(uint indexId, key_range *lower, key_r
 	DBUG_RETURN(MAX(guestimate, 2));
 }
 
-void StorageInterface::getKeyDesc(TABLE *table, int indexId, StorageIndexDesc *indexDesc)
+void StorageInterface::getKeyDesc(TABLE *srvTable, int indexId, StorageIndexDesc *indexDesc)
 {
-	KEY *keyInfo = table->key_info + indexId;
+	KEY *keyInfo = srvTable->key_info + indexId;
 	int numberKeys = keyInfo->key_parts;
 	
 	indexDesc->id			  = indexId;
 	indexDesc->numberSegments = numberKeys;
 	indexDesc->unique		  = (keyInfo->flags & HA_NOSAME);
-	indexDesc->primaryKey	  = (table->s->primary_key == (uint)indexId);
+	indexDesc->primaryKey	  = (srvTable->s->primary_key == (uint)indexId);
 	
 	// Clean up the index name for internal use
 	
@@ -1586,16 +1621,12 @@ int StorageInterface::rename_table(const char *from, const char *to)
 
 	ret = storageShare->renameTable(storageConnection, to);
 	
-	if (!ret)
-		remapIndexes(table);
+	remapIndexes(table);
 	
 	storageShare->unlock();
 	storageShare->unlockIndexes();
 
-	if (ret)
-		DBUG_RETURN(error(ret));
-
-	DBUG_RETURN(ret);
+	DBUG_RETURN(error(ret));
 }
 
 double StorageInterface::read_time(uint index, uint ranges, ha_rows rows)
@@ -1643,8 +1674,12 @@ int StorageInterface::scanRange(const key_range *start_key,
 	haveStartKey = false;
 	haveEndKey = false;
 	storageTable->upperBound = storageTable->lowerBound = NULL;
-	int ret = 0;
 
+	int ret = storageTable->checkCurrentIndex();
+
+	if (ret)
+		DBUG_RETURN(error(ret));
+	
 	if (start_key && !storageTable->isKeyNull((const unsigned char*) start_key->key, start_key->length))
 		{
 		haveStartKey = true;
@@ -1655,7 +1690,7 @@ int StorageInterface::scanRange(const key_range *start_key,
 		else if (start_key->flag == HA_READ_AFTER_KEY)
 			storageTable->setReadAfterKey();
 
-		int ret = storageTable->setIndexBound((const unsigned char*) start_key->key,
+		ret = storageTable->setIndexBound((const unsigned char*) start_key->key,
 												start_key->length, LowerBound);
 		if (ret)
 			DBUG_RETURN(error(ret));
@@ -1708,6 +1743,11 @@ int StorageInterface::index_next(uchar *buf)
 	if (activeBlobs)
 		freeActiveBlobs();
 
+	int ret = storageTable->checkCurrentIndex();
+
+	if (ret)
+		DBUG_RETURN(error(ret));
+	
 	for (;;)
 		{
 		lastRecord = storageTable->nextIndexed(nextRecord, lockForUpdate);
@@ -2332,9 +2372,9 @@ int StorageInterface::check_if_supported_alter(TABLE *altered_table, HA_CREATE_I
 	DBUG_ENTER("StorageInterface::check_if_supported_alter");
 	tempTable = (create_info->options & HA_LEX_CREATE_TMP_TABLE) ? true : false;
 	HA_ALTER_FLAGS supported;
-	supported = supported | HA_ADD_INDEX | HA_DROP_INDEX | HA_ADD_UNIQUE_INDEX | HA_DROP_UNIQUE_INDEX;
+	supported = supported | HA_ADD_INDEX | HA_DROP_INDEX | HA_ADD_UNIQUE_INDEX | HA_DROP_UNIQUE_INDEX | HA_ADD_PK_INDEX | HA_DROP_PK_INDEX;
 						/**
-						| HA_ADD_COLUMN | HA_COLUMN_STORAGE | HA_COLUMN_FORMAT | HA_ADD_PK_INDEX | HA_DROP_PK_INDEX;
+						| HA_ADD_COLUMN | HA_COLUMN_STORAGE | HA_COLUMN_FORMAT ;
 						**/
 	HA_ALTER_FLAGS notSupported = ~(supported);
 	
@@ -2367,33 +2407,6 @@ int StorageInterface::check_if_supported_alter(TABLE *altered_table, HA_CREATE_I
 			}
 		}
 		
-	if (alter_flags->is_set(HA_ADD_INDEX) || alter_flags->is_set(HA_ADD_UNIQUE_INDEX)
-		|| alter_flags->is_set(HA_DROP_INDEX) || alter_flags->is_set(HA_DROP_UNIQUE_INDEX))
-		{
-		for (unsigned int n = 0; n < altered_table->s->keys; n++)
-			{
-			KEY *key = altered_table->key_info + n;
-			KEY *tableEnd = table->key_info + table->s->keys;
-			KEY *tableKey;
-
-			// Determine if this is a new index
-
-			for (tableKey = table->key_info; tableKey < tableEnd; tableKey++)
-				if (!strcmp(tableKey->name, key->name))
-					break;
-
-			// Unique, non-null keys are interpreted as primary keys.
-			// Online add/drop primary keys not yet supported.
-		
-			if (tableKey >= tableEnd)
-				if (n == altered_table->s->primary_key)
-					{
-					DBUG_PRINT("info",("Online add/drop primary key not supported"));
-					DBUG_RETURN(HA_ALTER_NOT_SUPPORTED);
-					}
-			}
-		}
-
 	DBUG_RETURN(HA_ALTER_SUPPORTED_NO_LOCK);
 }
 
@@ -2417,10 +2430,10 @@ int StorageInterface::alter_table_phase2(THD* thd, TABLE* altered_table, HA_CREA
 	if (alter_flags->is_set(HA_ADD_COLUMN))
 		ret = addColumn(thd, altered_table, create_info, alter_info, alter_flags);
 		
-	if ((alter_flags->is_set(HA_ADD_INDEX) || alter_flags->is_set(HA_ADD_UNIQUE_INDEX)) && !ret)
+	if ((alter_flags->is_set(HA_ADD_INDEX) || alter_flags->is_set(HA_ADD_UNIQUE_INDEX) || alter_flags->is_set(HA_ADD_PK_INDEX)) && !ret)
 		ret = addIndex(thd, altered_table, create_info, alter_info, alter_flags);
 		
-	if ((alter_flags->is_set(HA_DROP_INDEX) || alter_flags->is_set(HA_DROP_UNIQUE_INDEX)) && !ret)
+	if ((alter_flags->is_set(HA_DROP_INDEX) || alter_flags->is_set(HA_DROP_UNIQUE_INDEX) || alter_flags->is_set(HA_DROP_PK_INDEX)) && !ret)
 		ret = dropIndex(thd, altered_table, create_info, alter_info, alter_flags);
 	
 	DBUG_RETURN(ret);
@@ -2503,8 +2516,7 @@ int StorageInterface::addIndex(THD* thd, TABLE* alteredTable, HA_CREATE_INFO* cr
 		
 	// The server indexes may have been reordered, so remap to the Falcon indexes
 	
-	if (!ret)
-		remapIndexes(alteredTable);
+	remapIndexes(alteredTable);
 	
 	storageShare->unlock();
 	storageShare->unlockIndexes();
@@ -2542,8 +2554,7 @@ int StorageInterface::dropIndex(THD* thd, TABLE* alteredTable, HA_CREATE_INFO* c
 	
 	// The server indexes have been reordered, so remap to the Falcon indexes
 	
-	if (!ret)
-		remapIndexes(alteredTable);
+	remapIndexes(alteredTable);
 	
 	storageShare->unlock();
 	storageShare->unlockIndexes();
@@ -2594,26 +2605,25 @@ void StorageInterface::mysqlLogger(int mask, const char* text, void* arg)
 		sql_print_information("%s", text);
 }
 
-int StorageInterface::setIndex(TABLE *table, int indexId)
+int StorageInterface::setIndex(TABLE *srvTable, int indexId)
 {
 	StorageIndexDesc indexDesc;
-	getKeyDesc(table, indexId, &indexDesc);
+	getKeyDesc(srvTable, indexId, &indexDesc);
 
 	return storageTable->setIndex(&indexDesc);
 }
 
-int StorageInterface::setIndexes(TABLE *table)
+int StorageInterface::setIndexes(TABLE *srvTable)
 {
 	int ret = 0;
 	
-	if (!table || storageShare->haveIndexes(table->s->keys))
+	if (!srvTable || storageShare->haveIndexes(srvTable->s->keys))
 		return ret;
 
 	storageShare->lockIndexes(true);
 	storageShare->lock(true);
 
-	ret = remapIndexes(table);
-	// validateIndexes(table, true);
+	ret = remapIndexes(srvTable);
 
 	storageShare->unlock();
 	storageShare->unlockIndexes();
@@ -2621,41 +2631,47 @@ int StorageInterface::setIndexes(TABLE *table)
 	return ret;
 }
 
-int StorageInterface::remapIndexes(TABLE *table)
+// Create an index entry in StorageTableShare for each TABLE index
+// Assume exclusive lock on StorageTableShare::syncIndexMap
+
+int StorageInterface::remapIndexes(TABLE *srvTable)
 {
 	int ret = 0;
 	
 	storageShare->deleteIndexes();
 
-	if (!table)
+	if (!srvTable)
 		return ret;
 		
-	for (uint n = 0; n < table->s->keys; ++n)
-		if ((ret = setIndex(table, n)))
-			break;
+	// Ok to ignore errors in this context
+	
+	for (uint n = 0; n < srvTable->s->keys; ++n)
+		setIndex(srvTable, n);
 
+	// validateIndexes(srvTable, true);
+	
 	return ret;
 }
 
-bool StorageInterface::validateIndexes(TABLE *table, bool exclusiveLock)
+bool StorageInterface::validateIndexes(TABLE *srvTable, bool exclusiveLock)
 {
 	bool ret = true;
 	
-	if (!table)
+	if (!srvTable)
 		return false;
 	
 	storageShare->lockIndexes(exclusiveLock);
 		
-	for (uint n = 0; (n < table->s->keys) && ret; ++n)
+	for (uint n = 0; (n < srvTable->s->keys) && ret; ++n)
 		{
 		StorageIndexDesc indexDesc;
-		getKeyDesc(table, n, &indexDesc);
+		getKeyDesc(srvTable, n, &indexDesc);
 		
 		if (!storageShare->validateIndex(n, &indexDesc))
 			ret = false;
 		}
 	
-	if (ret && (table->s->keys != (uint)storageShare->numberIndexes()))
+	if (ret && (srvTable->s->keys != (uint)storageShare->numberIndexes()))
 		ret = false;
 	
 	storageShare->unlockIndexes();
@@ -2663,7 +2679,7 @@ bool StorageInterface::validateIndexes(TABLE *table, bool exclusiveLock)
 	return ret;
 }
 
-int StorageInterface::genTable(TABLE* table, CmdGen* gen)
+int StorageInterface::genTable(TABLE* srvTable, CmdGen* gen)
 {
 	const char *tableName = storageTable->getName();
 	const char *schemaName = storageTable->getSchemaName();
@@ -2671,9 +2687,9 @@ int StorageInterface::genTable(TABLE* table, CmdGen* gen)
 	const char *sep = "";
 	char nameBuffer[256];
 
-	for (uint n = 0; n < table->s->fields; ++n)
+	for (uint n = 0; n < srvTable->s->fields; ++n)
 		{
-		Field *field = table->field[n];
+		Field *field = srvTable->field[n];
 		CHARSET_INFO *charset = field->charset();
 
 		if (charset)
@@ -2692,12 +2708,27 @@ int StorageInterface::genTable(TABLE* table, CmdGen* gen)
 		sep = ",\n";
 		}
 
-	if (table->s->primary_key < table->s->keys)
+	if (srvTable->s->primary_key < srvTable->s->keys)
 		{
-		KEY *key = table->key_info + table->s->primary_key;
+		KEY *key = srvTable->key_info + srvTable->s->primary_key;
 		gen->gen(",\n  primary key ");
 		genKeyFields(key, gen);
 		}
+
+#if 0		
+	// Disable until UPGRADE TABLE supports index syntax
+	
+	for (unsigned int n = 0; n < srvTable->s->keys; n++)
+		{
+		if (n != srvTable->s->primary_key)
+			{
+			KEY *key = srvTable->key_info + n;
+			const char *unique = (key->flags & HA_NOSAME) ? "unique " : "";
+			gen->gen(",\n  %s key ", unique);
+			genKeyFields(key, gen);
+			}
+		}
+#endif		
 
 	gen->gen (")");
 
@@ -3739,18 +3770,22 @@ int StorageInterface::recover (handlerton * hton, XID *xids, uint length)
 	DBUG_RETURN(count);
 }
 
+// Build a record field map for use by encode/decodeRecord()
 
-void StorageInterface::mapFields(TABLE *table)
+void StorageInterface::mapFields(TABLE *srvTable)
 {
+	if (!srvTable)
+		return;
+	
 	maxFields = storageShare->format->maxId;
 	unmapFields();
 	fieldMap = new Field*[maxFields];
 	memset(fieldMap, 0, sizeof(fieldMap[0]) * maxFields);
 	char nameBuffer[256];
 
-	for (uint n = 0; n < table->s->fields; ++n)
+	for (uint n = 0; n < srvTable->s->fields; ++n)
 		{
-		Field *field = table->field[n];
+		Field *field = srvTable->field[n];
 		storageShare->cleanupFieldName(field->field_name, nameBuffer, sizeof(nameBuffer), false);
 		int id = storageShare->getFieldId(nameBuffer);
 		
